FBX Export shading issue (Broken normals?) #43579

Closed
opened 2015-02-06 13:40:11 +01:00 by Ivan Santic · 9 comments

System Information
Operating system and graphics card

Windows 8.1, Nvidia GTX 970, Nvidia GTX 650

Blender Version
Broken: Any latest build from https://builder.blender.org/download - Gooseberry branch or a regular one

Worked: 2.73a official release build and before works as advertised.

Short description of error
On FBX export my normals/shading does not look right on any object, even on the simple cube in other 3d apps like Modo, Keyshot etc.

Image> http://www.pasteall.org/pic/83416

Exact steps for others to reproduce the error
Export of any mesh object to FBX format.
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Operating system and graphics card Windows 8.1, Nvidia GTX 970, Nvidia GTX 650 **Blender Version** Broken: Any latest build from https://builder.blender.org/download - Gooseberry branch or a regular one Worked: 2.73a official release build and before works as advertised. **Short description of error** On FBX export my normals/shading does not look right on any object, even on the simple cube in other 3d apps like Modo, Keyshot etc. Image> http://www.pasteall.org/pic/83416 **Exact steps for others to reproduce the error** Export of any mesh object to FBX format. Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @moth3r

Added subscriber: @moth3r

Added subscriber: @mont29

Added subscriber: @mont29

From the look of it, it’s like smoothed normals where you are expecting sharp ones (i.e. flat shading).

Would need more info, like a demo .blend file and exported FBX, whith exact settings used for export (screenshot is simpler).

From the look of it, it’s like smoothed normals where you are expecting sharp ones (i.e. flat shading). Would need more info, like a demo .blend file and exported FBX, whith exact settings used for export (screenshot is simpler).
Author

It looks like everything gets exported with smooth normals even though they are flat for sure. None of my files, meshes get properly exported with any of the new versions of #b3d. Official build of Blender 2.73a works always like a charm.

Also if I define "operator presets" I cannot see which preset is selected - active if I've chosen one. Instead of my preset there is just active text "Operator preset". I can delete it though but I don't see which one gets deleted. That's another issue.

Mesh.zip

settings.jpg

It looks like everything gets exported with smooth normals even though they are flat for sure. None of my files, meshes get properly exported with any of the new versions of #b3d. Official build of Blender 2.73a works always like a charm. Also if I define "operator presets" I cannot see which preset is selected - active if I've chosen one. Instead of my preset there is just active text "Operator preset". I can delete it though but I don't see which one gets deleted. That's another issue. [Mesh.zip](https://archive.blender.org/developer/F141693/Mesh.zip) ![settings.jpg](https://archive.blender.org/developer/F141695/settings.jpg)

Can confirm the issue.

Can confirm the issue.
Bastien Montagne self-assigned this 2015-02-06 19:30:59 +01:00

This issue was referenced by a42553f986

This issue was referenced by a42553f986baa8f457b2b9db0b97d8e86bfca1cf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a42553f986.

Closed by commit a42553f986.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43579
No description provided.